# Harmony

./: .gitignore  Cargo.toml  Dioxus.toml
src/: app.rs  main.rs
src/assets/style/: beneficiaries.css  beneficiary.css  beneficiary_page.css  home.css  login.css  stats.css  style.css  ts_table.css  users.css
src/controler/: beneficiary.rs  connection.rs  details.rs  mod.rs  statistiques.rs  user.rs
src/model/: mod.rs
src/model/beneficiaries/: beneficiary.rs  details.rs  mod.rs
src/model/stats/: export.rs  mod.rs  stats.rs  traits.rs
src/model/stats/graph/: date_range.rs  graph_bar.rs  graph_builder.rs  graph_line.rs  graph_pie.rs  graph_type.rs  mod.rs  time_filter.rs
src/model/stats/statistiques/: age.rs  amount.rs  city.rs  employment.rs  family_situation.rs  income.rs  kid.rs  language.rs  mod.rs  origin.rs  presence.rs  sexe.rs  statistiques.rs  study.rs
src/model/users/: mod.rs  role.rs  token.rs  user.rs  user_login.rs  user_role.rs
src/view/: mod.rs
src/view/admin/: beneficiaries.rs  beneficiary.rs  mod.rs
src/view/admin/beneficiary/: mod.rs
src/view/admin/stats/: mod.rs
src/view/admin/users/: mod.rs
src/view/inputs/: calendar.rs  dates.rs  logins.rs  mod.rs  numbers.rs  selectables.rs  switches.rs  textareas.rs  texts.rs
src/view/login/: mod.rs
src/view/nav/: beneficiaries.rs  beneficiary.rs  beneficiary_page.rs  export.rs  home.rs  mod.rs  navigation.rs
src/view/table/: beneficiaries_table.rs  beneficiary_table.rs  beneficiary_ts_table.rs  mod.rs  user_table.rs
src/view/ts/: beneficiaries.rs  beneficiary.rs
src/view/user/: beneficiaries.rs  beneficiary.rs  mod.rs
style/: _inputs.scss  _root.scss  beneficiaries.scss  beneficiary.scss  beneficiary_page.scss  home.scss  login.scss  stats.scss  style.scss  ts_table.scss  users.scss
