[package]
name = "Harmony_2"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
dioxus-hooks = "0.4.3"
dioxus-router = "0.4.3"
dioxus-router-macro = "0.4.3"
chrono = "0.4.34"
anyhow = "1.0.79"
rust_xlsxwriter = { version = "0.62.0" , features = ["chrono"]}
serde = { version = "1.0.196", features = ["derive"] }
bincode = "2.0.0-rc.3"
reqwest = { version = "0.11.24", features = ["json"] }
plotters = "0.3.5"
dotenv = "0.15.0"
tokio = "1.36.0"
regex = "1.10.3"
base64 = "0.21.7"
chacha20poly1305 = { version = "0.10.1"}
rand = "0.8.5"


[build]
rustflags = ["-Z", "threads=8"]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[features]
bundle = []
